# holowizard

./: .gitignore  .gitlab-ci.yml  .pre-commit-config.yaml  .zenodo.json  MANIFEST.in  README.md  citation.cff  pyproject.toml  requirements.txt
.github/workflows/: publish-holowizard-to-production.yml  publish-holowizard-to-test.yml  publish-livereco-client-to-production.yml  publish-livereco-client-to-test.yml  python-publish-client-to-test.yml  python-publish-to-test.yml
.gitlab/issue_templates/: Bug.md  DocumentationRequest.md  FeatureRequest.md  ResearchIdea.md
.gitlab/merge_request_templates/: MR.md
Examples/asrm/: magnesium_wire.py  spider_hair.py
Examples/find_focus/: magnesium_wire.py  spider_hair.py
Examples/focus_series_multidim/: magnesium_wire.py  spider_hair.py
Examples/focus_series_singledim/: magnesium_wire.py  spider_hair.py
Examples/multidist/: dicty_sketch.py  dicty_sketch_asrm.py
holowizard/: __init__.py
holowizard/core/: __init__.py
holowizard/core/api/models/: __init__.py
holowizard/core/api/parameters/: __init__.py  beam_setup.py  dask_options.py  data_dimensions.py  flatfield_components_params.py  flatfield_correction_params.py  measurement.py  options.py  padding.py  reco_params.py  regularization.py
holowizard/core/api/viewer/: __init__.py  hdf5_viewer.py  loss_viewer.py  pyplot_viewer.py  pyplot_viewer_holodemo.py  pyplot_viewer_probe_retrieval.py  zeromq_viewer.py
holowizard/core/dask_utils/: dask_controller.py
holowizard/core/experiment/: beamtime.py  scan.py
holowizard/core/find_focus/: find_focus_z01.py  find_focus_z01_a0.py  find_focus_z01_a0_orthogonal_search.py  focus_loss_metrics.py
holowizard/core/logging/: header.py  logger.py
holowizard/core/models/: __init__.py  cone_beam.py  fresnel_propagator.py  fresnel_propagator_torch.py
holowizard/core/parameters/: __init__.py  beam_setup.py  data_dimensions.py  flatfield_components_params.py  flatfield_correction_params.py  measurement.py  options.py  padding.py  reco_params.py  regularization.py
holowizard/core/parameters/type_conversion/: member_value_adapter_interface.py  member_value_adapter_numpy.py  member_value_adapter_torch.py
holowizard/core/phantoms/: __init__.py  cylinder_round_tip.py  edge.py  triangle.py
holowizard/core/preprocessing/: __init__.py  boundaries.py  calculate_flatfield_components.py  correct_flatfield.py  process_data_dimensions.py  process_image.py  process_padding_options.py
holowizard/core/reconstruction/: logging.py  transformation.py  utils.py
holowizard/core/reconstruction/constraints/: regularization.py  window_2d.py  window_functions.py
holowizard/core/reconstruction/gradients/: analytical.py
holowizard/core/reconstruction/probe_retrieval/: basic_operations.py  host_context.py  host_reconstruction.py
holowizard/core/reconstruction/single_projection/: context.py  reconstruct.py  reconstruct_multistage.py
holowizard/core/scripts/: create_examples.py
holowizard/core/serialization/: __init__.py  params_serializer.py
holowizard/core/server/: find_focus.py  flatfield_correction.py  main.py  reconstruction.py
holowizard/core/utils/: fileio.py  plot_loss_chart.py  remove_outliers.py  transform.py
holowizard/forge/configs/: default.json  test_config.json
holowizard/forge/datasets/: base_dataset.py  hdf5_dataset.py
holowizard/forge/experiment/setup/: nfh_constant_setup.py  nfh_setup.py
holowizard/forge/generators/: data_generator.py  flatfield_generator.py  phantom_generator.py  probe_generator.py
holowizard/forge/objects/: phantom.py  placement.py
holowizard/forge/objects/shapes/: shape.py
holowizard/forge/scripts/: create_testconfig.py  generate_data.py
holowizard/forge/utils/: fileIO.py  transforms.py  unit_conversions.py  utilities.py
holowizard/forge/utils/labeller/: __init__.py  hdf5_labeller.py  labeller.py
holowizard/interface/default_options/: find_focus.py  nano3636_spider_hair.py  nano3674_magnesium_wire.py  nano7111_tooth.py
holowizard/interface/network/: functions.py  send.py  socket.py
holowizard/interface/parameters/: __init__.py  beam_setup.py  data_dimensions.py  flatfield_components_params.py  flatfield_correction_params.py  measurement.py  reco_params.py
holowizard/interface/type_conversion/: member_value_adapter_numpy.py  member_value_adapter_torch.py
holowizard/livereco/client/: MANIFEST.in  functions.py  pyproject.toml  send.py  socket.py
holowizard/livereco/server/: find_focus.py  flatfield_correction.py  main.py  reconstruction.py
holowizard/livereco_server/client/: socket.py
holowizard/livereco_server/server/: find_focus.py  main.py  reconstruction.py
holowizard/pipe/: README.md
holowizard/pipe/beamtime/: P05.py  __init__.py  beamtime.py
holowizard/pipe/cluster/: __init__.py  cluster.py  scheduler.py  slurm_cluster.py  unset.py
holowizard/pipe/gui/: main_gui.py
holowizard/pipe/gui/gui_utils/: find_focus_thread.py  logging_editor.py  phase_retrieval_thread.py
holowizard/pipe/scan/: __init__.py  p05_scan.py  scan.py
holowizard/pipe/scripts/: holopipe.py  reco.py
holowizard/pipe/server/: app.py  config.py  websocket_viewer.py
holowizard/pipe/tasks/: __init__.py  find_focus.py  flat_field_correction.py  phase_retrieval.py  tomography.py
holowizard/pipe/templates/: parameter.html  scan.html
holowizard/pipe/utils/: clean_yaml.py  reco_params.py  submit_and_handle.py
tests/: pytest.sbatch
tests/core/: test_api_parameter_imports.py  test_fileio.py  test_overall_results.py
tests/core/models/: test_api_model_imports.py  test_cone_beam_calculations.py  test_fresnel_propagator_backward.py  test_fresnel_propagator_forward.py
tests/core/parameters/: test_api_parameter_imports.py
tests/core/utils/: test_fileio.py
tests/forge/: data_generator_test.py  db_builder_test.py  db_operation_test.py  forward_simulation_test.py  load_phantom_test.py  plot_shapes_test.py
tests/pipe/beamtime_manager/: test_beamtimeobject.py  test_bt_utils.py  test_p05scan.py
tests/pipe/utils/: test_img_utils.py  test_project_utils.py
(+64 files in other folders)
