[build-system]
requires = ["setuptools >= 72.0", "setuptools-scm>=8"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]  # list of folders that contain the packages (["."] by default)

[tool.setuptools.dynamic]
dependencies = {file = "requirements.txt"}

[tool.setuptools.package-data]
"*" = ["logo.png"]

[project]
name="holowizard"
dynamic = ["version"]
requires-python = ">=3.11,<=4.0"
readme = "README.md"
license = {file="LICENSE"}
keywords = ["phase retrieval", "near-field holography", "tomography", "asrm"]
authors = [
  {name = "Johannes Dora", email = "johannes.dora@desy.de"},
  {name = "Johannes Hagemann", email = "johannes.hagemann@desy.de"},
  {name = "André Lopes", email="andre.lopes@hereon.de"},
  {name = "Johannes Hagemann", email = "johannes.hagemann@desy.de"},
  {name = "Silja Flenner", email="silja.flenner@hereon.de"},
  {name = "Johannes Grün", email="johannes.gruen@desy.de"},
  {name = "Sebastian Eberle", email="sebastian.eberle@desy.de"},
  {name = "Cem Cinar", email = "cem.cinar@tuhh.de"}
]
classifiers = [
  "Programming Language :: Python"
]

maintainers = [
  {name = "Johannes Dora", email = "johannes.dora@desy.de"},
  {name = "André Lopes", email="andre.lopes@hereon.de"},
  {name = "Johannes Grün", email="johannes.gruen@desy.de"},
  {name = "Sebastian Eberle", email="sebastian.eberle@desy.de"},
  {name = "Johannes Hagemann", email = "johannes.hagemann@desy.de"}
]

[project.urls]
Repository = "https://github.com/DESY-FS-PETRA/holowizard"

[tool.setuptools_scm]

